bloquear boton agregar reseña

--- a/Tp-Final-labo4/src/app/Components/review-list/review-list.html
+++ b/Tp-Final-labo4/src/app/Components/review-list/review-list.html
@@ -1,7 +1,7 @@
 <div class="review-section">
 
  
-  <!-- ⭐ SI YA RESEÑÓ, NO MOSTRAR FORMULARIO -->
+  <!--  SI YA RESEÑÓ, NO MOSTRAR FORMULARIO -->
   @if (userAlreadyReviewed) {
     <div class="already-reviewed-box">
       <h3>Ya dejaste una reseña para esta película</h3>
@@ -14,7 +14,7 @@
     </div>
   }
   @else {
-    <!-- ⭐ FORMULARIO ORIGINAL -->
+    <!--  FORMULARIO ORIGINAL -->
     <div class="add-review">
       <h3 class="section-title">Agrega tu reseña</h3>
 
