--- a/Tp-Final-labo4/src/app/Components/admin-reviews/admin-reviews.css
+++ b/Tp-Final-labo4/src/app/Components/admin-reviews/admin-reviews.css
@@ -155,3 +155,17 @@
     width: 100%;
   }
 }
+.movie-link {
+  cursor: pointer;
+  color: #4aa4ff;
+  font-weight: 600;
+  text-decoration: none;
+  transition: 0.2s;
+}
+
+.movie-link:hover {
+  color: #1e90ff;
+  text-decoration: underline;
+}
+
+
